os4/net_policies/backend-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-ingress
  namespace: prod
spec:
  podSelector:
    matchLabels:
       app: backend-server
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: web-1
          app: db-server3
