os4/net_policies/database-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: database-ingress
  namespace: prod
spec:
  podSelector:
    matchLabels:
       app: db-server3
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend-server
