os4/net_policies/web-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-ingress
  namespace: prod
spec:
  podSelector:
    matchLabels:
       app: web-1
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend-server
